[gd_scene load_steps=5 format=3 uid="uid://start_menu_001"]

[ext_resource type="Script" path="res://scenes/ui/start_menu.gd" id="1"]
[ext_resource type="Script" path="res://scenes/ui/embers.gd" id="2"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(0.9, 0.3, 0.2, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font_size = 24
font_color = Color(0.8, 0.6, 0.3, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.05, 0.12, 1)

[node name="Embers" type="Node2D" parent="."]
z_index = 1
script = ExtResource("2")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 120.0
offset_right = 300.0
offset_bottom = 200.0
horizontal_alignment = 1
vertical_alignment = 1
text = "TOWER DEFENSE"
label_settings = SubResource("LabelSettings_title")

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 240.0
horizontal_alignment = 1
vertical_alignment = 1
text = "Demons from Hell"
label_settings = SubResource("LabelSettings_subtitle")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 200.0
theme_override_constants/separation = 20

[node name="StartBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(240, 50)
text = "Start Game"

[node name="SettingsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(240, 50)
text = "Settings"
disabled = true

[node name="ExitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(240, 50)
text = "Exit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
horizontal_alignment = 1
text = "v0.2.0 â€” Phase 1"
